Upgraded the app after 6 years.